@@ -64,6 +64,7 @@ Bugs fixed:
 - 3005424 Memory leak on error responses
 - 3005508 Warning in indCIMXMLHandler.c
 - 3005574 make clean does not remove cimXmlParserProcessed.c
+- 3006687 ProfileProvider depends on sfcc
 
 Changes in 1.3.7
 ================
